--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - run: ' echo $BODY '
         env:
-          BODY: ${{ github.event.issue_comment.body }}
+          BODY: ${{ github.event.comment.body }}
