--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - run: 'echo $URL'
         env:
-          URL: ${{ github.event.page_build.html_url }}
+          URL: ${{ github.event.pages.html_url }}
